--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Welcome to Flask App</h2>
+        <h2>Welcome to Flask App, Version 2 !!</h2>
         <form action="/" method="post">
             <label for="name">Enter your name:</label>
             <input type="text" name="name" id="name" required>
